---------------------------------------------------------------------------------------------------
Version: 0.3.21
Date: 2021-03-27
  Changes:
    - Autocrafting setup simplified
---------------------------------------------------------------------------------------------------
Version: 0.3.20
Date: 2021-03-26
  Changes:
    - show items-per-timeunit
    - use icons in settings
  Bugfixes:
    - fixing Crash in map editor
---------------------------------------------------------------------------------------------------
Version: 0.3.19
Date: 2021-03-23
  Bugfixes:
    - fixing help only works for entities 
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 2021-03-23
  Changes:
    - using selected_prototype on events to provide more situations for help
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 2021-03-01
  Changes:
    - by default, autoresearch adds only 1 request at a time
  Bugfixes:
    - fixing crash when closing SelectRemindor
    - fixing crash when loading save file
    - fixing crash when opening gui with other gui open
---------------------------------------------------------------------------------------------------
Version: 0.3.16
Date: 2021-02-25
  Bugfixes:
    - Mitigating Crash opening ingteb GUI in an active py game
---------------------------------------------------------------------------------------------------
Version: 0.3.15
Date: 2021-02-24
  Bugfixes:
    - Fixing Crash loading a py game Part iii
---------------------------------------------------------------------------------------------------
Version: 0.3.14
Date: 2021-02-23
  Bugfixes:
    - Fixing Crash loading a py game
---------------------------------------------------------------------------------------------------
Version: 0.3.13
Date: 2021-02-23
  Bugfixes:
    - Fixing Crash loading a py game