@@ -1,5 +1,5 @@
 [mod-name]
-ingteb=[img=ingteb] Ingame-Technologie-Browser
+ingteb=Ingame-Technologie-Browser
 
 [controls]
 ingteb-main-key=Hilfe
@@ -42,6 +42,7 @@ workers-for-recipes=Produzenten, die diese Baupläne verarbeiten können
 researching-technologies-for-item=Technologien, die dieses Element zur Forschung benötigen
 prerequisites-for-technology=Technologische Voraussetzungen
 technologies-enabled=Freigeschaltete Technologien
+technology-enables=Schaltet frei
 recipes-for-worker=Baupläne, die dieser Produzent verarbeiten kann
 creating-recipes-for-item=Baupläne zur Erzeugung
 consuming-recipes-for-item=Baupläne zur Verarbeitung
