@@ -1,5 +1,5 @@
 [mod-name]
-ingteb=[img=ingteb] Ingame Technology browser
+ingteb=Ingame Technology browser
 
 [controls]
 ingteb-main-key=Help
@@ -44,6 +44,7 @@ workers-for-recipes=Workers that can produce this recipes
 researching-technologies-for-item=Technologies that requires this item for research
 prerequisites-for-technology=Prerequisite for technology
 technologies-enabled=Technologies enabled by this technology
+technology-enables=Enables
 recipes-for-worker=Recipes of this worker
 creating-recipes-for-item=Creating recipes
 consuming-recipes-for-item=Consuming recipes
